--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
 /* Text */ 
 
 
-.text { /* Для левого блока (блок блога) */
+.text { /* Для правого блока (блок блога) */
     width: 100%;
     height: 100%;
     padding: 0 20px 20px 20px;
@@ -47,8 +47,8 @@ body {
     font-size: 21px;
 }
 
-.text2 { /* Для правого блока (блок примеров) */
-    width: 68%;
+.text2 { /* Для левого блока (блок примеров) */
+    width: 10%;
     height: 100%;
     padding: 0 20px 20px 20px;
     text-align: left;
@@ -79,13 +79,13 @@ body {
     margin: 20px;
 }
 
-.divide {
+.divide { /* Ждя обоих блоков */
     position: absolute;
     display: flex;
     flex-direction: row;
     top: 17vh;
     width: 99%;
-    height: 77%;
+    height: 78%;
     column-gap: 1rem;
 }
 
@@ -153,8 +153,6 @@ bold {
     position: absolute;
     top: 2vh;
     left: 1vw;
-    color: white;
-    
 }
 
 
