--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,11 @@ body {
     padding: 0;
     }
 
-.ex1 {
+.ex1 { /* Блок моего учения css) */
     width: fit-content;
     height: fit-content;
     text-align: center;
-    margin: 0;
+    margin-top: 1vw;
     border: solid;
     border-radius: 5px;
     background-color: black;
@@ -37,7 +37,7 @@ body {
 
 
 .text { /* Для правого блока (блок блога) */
-    width: 100%;
+    width: 96%;
     height: 100%;
     padding: 0 20px 20px 20px;
     text-align: left;
@@ -45,6 +45,7 @@ body {
     border-radius: 40px;
     background-color: rgba(40, 40, 40, 0.5);
     font-size: 21px;
+    margin-right: 10px;
 }
 
 .text2 { /* Для левого блока (блок примеров) */
@@ -62,7 +63,7 @@ body {
     margin: 0px;
     font-size: 15px;
     font-weight: normal;
-    color: green;
+    color: rgb(0,230,0);
 }
 
 .text4 { /* Для p.s */
@@ -79,13 +80,12 @@ body {
     margin: 20px;
 }
 
-.divide { /* Ждя обоих блоков */
-    position: absolute;
+.divide { /* Для обоих блоков */
     display: flex;
     flex-direction: row;
-    top: 17vh;
+    justify-content: flex-end;
     width: 99%;
-    height: 78%;
+    height: 88%;
     column-gap: 1rem;
 }
 
@@ -93,13 +93,35 @@ bold {
     font-weight: bolder;
 }
 
+.text5 {
+    margin: 0;
+    font-size: 19px;
+    font-weight: normal;
+    border-style: solid;
+    border-color: gray;
+    border-width: 0 0 1px 0;
+}
+
 
 /* panel */ 
 
 
+.container { /* Делит навигацию и контент на сайте  */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
 .panelContainer {
     display: flex;
-    width: 90vw;
+    width: 100vw;
+    background-color: rgb(40, 40, 40);
+    border-style: solid;
+    border-color: gray;
+    border-width: 0 0 1px 0;
 }
 
 .panelContainerFirst {
@@ -107,8 +129,8 @@ bold {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    margin-left: 0px;
-    font-size: 20px;
+    margin-left: 1.5vw;
+    font-size: 14px;
     width: 100%;
     column-gap: 6rem;
 }
@@ -119,7 +141,7 @@ bold {
     justify-content: center;
     align-items: center;
     margin-left: 100px;
-    font-size: 20px;
+    font-size: 18px;
     width: 100%;
     column-gap: 6rem;
 }
@@ -129,7 +151,7 @@ bold {
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    margin: 0 auto;
+    margin-right: 1.5vw;
     font-size: 20px;
     width: 100%;
     column-gap: 6rem;
@@ -151,8 +173,28 @@ bold {
 
 .goback {
     position: absolute;
-    top: 2vh;
-    left: 1vw;
+    top: 0;
+    left: 0;
+    background-color: rgb(40, 40, 40);
+    color: white;
+    border-top: 0;
+    border-left: 0;
+    border-bottom: 0;
+    border-color: black;
+    height: 3.7vw;
+}
+
+.navigation {
+    width: 12vw;
+    height: 100%;
+    border-style: solid;
+    display: flex;
+    text-align: left;
+    border-style: solid;
+    border-color: gray;
+    border-width: 0 1px 0 0;
+    flex-direction: column;
+    background-color: rgba(40, 40, 40, 0.7);
 }
 
 
@@ -178,16 +220,40 @@ a:hover {
 
 
 .panelSettings {
-    width: fit-content;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(40, 40, 40, 0.2);
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
-    position: absolute;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+}
+
+.panelSettingsInside {
+    width: fit-content;
+    height: fit-content;
     background-color: rgb(40, 40, 40);
-    top: 6vh;
-    left: 83vw;
-    padding: 5px;
-    border: 2px solid;
     border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 10px
+}
+
+.apply {
+    width: 100%;
+    height: 3vh;
+    background-color: rgb(50, 50, 50);
+    border-style: solid;
+    border-color: rgb(70,70,70);
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .hidden {
