--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,6 @@
 }
 
 body {
-    background-image: linear-gradient(to right bottom, var(--first-color), var(--second-color));
-    background-repeat: no-repeat;
     overflow: hidden;
     width: 100vw;
     height: 100vh;
@@ -18,6 +16,18 @@ body {
     margin: 0;
     padding: 0;
     }
+
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(to right bottom, var(--first-color), var(--second-color));
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .ex1 { /* Блок моего учения css) */
     width: fit-content;
@@ -37,16 +47,35 @@ body {
 
 
 .text { /* Для правого блока (блок блога) */
-    width: 96%;
-    height: 100%;
-    padding: 0 20px 20px 20px;
+    width: 100%;
+    height: 100vh;
+    padding: 0 20px 0 20px;
     text-align: left;
-    border: solid;
-    border-radius: 40px;
-    background-color: rgba(40, 40, 40, 0.5);
     font-size: 21px;
     margin-right: 10px;
+    background-color: rgba(40, 40, 40, 0.5);
+    overflow-y: scroll; 
 }
+
+ /* width */
+.text::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.text::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+.text::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+.text::-webkit-scrollbar-thumb:hover {
+  background: #555;
+} 
 
 .text2 { /* Для левого блока (блок примеров) */
     width: 10%;
@@ -73,8 +102,7 @@ body {
     opacity: 0.5;
 }
 
-.content { /* Для содержания (когда или что это) */
-    margin: 0 0 15px 0;
+.content { /* Параграфы */
     text-align: center;
     font-size: 26px;
     margin: 20px;
@@ -84,8 +112,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    width: 99%;
-    height: 88%;
+    width: 100%;
+    height: 100%;
     column-gap: 1rem;
 }
 
@@ -94,8 +122,8 @@ bold {
 }
 
 .text5 {
-    margin: 0;
-    font-size: 19px;
+    margin: 4px 0;
+    font-size: 18px;
     font-weight: normal;
     border-style: solid;
     border-color: gray;
@@ -111,7 +139,7 @@ bold {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     width: 100%;
 }
 
@@ -189,7 +217,7 @@ bold {
     height: 100%;
     border-style: solid;
     display: flex;
-    text-align: left;
+    text-align: center;
     border-style: solid;
     border-color: gray;
     border-width: 0 1px 0 0;
@@ -242,7 +270,10 @@ a:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    row-gap: 10px
+    row-gap: 10px;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
 }
 
 .apply {
