--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -11,11 +11,11 @@ body {
 }
 
 header {
-    background: rgb(36,36,36);
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
+    justify-content: space-around;
+    background: rgb(36,36,36);
     width: 100vw;
     height: fit-content;
     column-gap: 1rem;
@@ -33,4 +33,11 @@ a {
     background-image: linear-gradient(to right, orange, rgb(132, 0, 255));
     text-decoration: none;
     font-weight: bold;
+}
+
+.text {
+    display: flex;
+    justify-content: flex-start;
+    margin: 20px 0 0 20px;
+    padding: 0;
 }
