--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -51,3 +51,11 @@ a {
     margin: 20px 0 0 20px;
     padding: 0;
 }
+
+.title {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+    padding: 0;
+    font-size: 30px;
+}
