--- a/css/style.css
+++ b/css/style.css
@@ -229,16 +229,15 @@ bold {
 /* link */ 
 
 
-a:link {
-    color: transparent;
-    background-clip: text;
-    background-image: linear-gradient(to right bottom, yellow, green);
+a:link, a:visited {
+    text-decoration: none;
+    color: green;
     scale: 1;
 }
 
 a:hover {
-    color: transparent;
-    background-clip: text;
+    text-decoration: none;
+    color: green;
     transition: 0.2s;
     scale: 1.3;
 }
