--- a/css/index.css
+++ b/css/index.css
@@ -178,9 +178,9 @@ p {
 
 button {
     border-radius: 6px;
-    border-color: gray;
+    border-color: rgb(140, 0, 255);
     border-width: 100%;
-    background-color: rgb(140, 0, 255);
+    background-image: linear-gradient(to right bottom, rgb(140, 0, 255), orange);
     color: white;
     font-size: 1.5rem;
     padding: 0.5rem 2rem;
