--- a/css/style.css
+++ b/css/style.css
@@ -231,13 +231,17 @@ bold {
 
 a:link, a:visited {
     text-decoration: none;
-    color: green;
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    background-image: linear-gradient(to right bottom, yellow, green);
     scale: 1;
 }
 
 a:hover {
-    text-decoration: none;
-    color: green;
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
     transition: 0.2s;
     scale: 1.3;
 }
