--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ bold {
 }
 
 .panelContainerFirst {
+    cursor: default;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
