--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -4,7 +4,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
     height: 100vh;
     background-color: rgb(20,20,20);
     color: white;
@@ -15,9 +16,8 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    background: rgb(36,36,36);
-    width: 100vw;
-    height: fit-content;
+    height: 7vh;
+    margin: 15px 0 180px 0;
     column-gap: 1rem;
 }
 
@@ -27,29 +27,47 @@ a {
     color: white;
 }
 
+.zalupa {
+    border: 1px solid black;
+    border-radius: 30px;
+    padding: 3px;
+    transition: background-color 0.3s;
+}
+    
+.zalupa:hover {
+    background-color: black;
+    transition: background-color 0.3s;
+}
+
+h1 {
+    margin: 0;
+}
+
 .titleMe {
-    margin-left: 300px;
+    margin: 0 0 0 300px;
     color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
     background-image: linear-gradient(to right, orange, rgb(132, 0, 255));
     text-decoration: none;
     font-weight: bold;
+    font-size: 30px;
 }
 
 .panelHome {
-    margin-left: 350px;
+    margin-left: 700px;
+    font-size: 20px;
 }
 
 .panelWorks {
-    margin-left: 80px;
+    margin-left: 30px;
+    font-size: 20px;
 }
 
 
 .text {
     display: flex;
-    justify-content: flex-start;
-    margin: 20px 0 0 20px;
+    justify-content: center;
     padding: 0;
 }
 
@@ -58,5 +76,5 @@ a {
     justify-content: center;
     margin: 20px 0;
     padding: 0;
-    font-size: 30px;
+    font-size: 35px;
 }
