--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -27,16 +27,35 @@ a {
     color: white;
 }
 
-.zalupa {
-    border: 1px solid black;
-    border-radius: 30px;
-    padding: 3px;
-    transition: background-color 0.3s;
+.animDs {
+    margin-left: 4px;
+    font-size: 20px;
+    border: 1px solid white;
+    border-radius: 800px;
+    padding: 5px 0 5px 4.5px;
+    transition: background-color 0.5s;
 }
-    
-.zalupa:hover {
-    background-color: black;
-    transition: background-color 0.3s;
+
+.animDs:hover {
+    color: rgb(20,20,20);
+    background-color: white;
+    transition: background-color 0.5s;
+}
+
+
+.animVK {
+    margin-left: 4px;
+    font-size: 20px;
+    border: 1px solid white;
+    border-radius: 30px;
+    padding: 5px 8px 5px 8px;
+    transition: background-color 0.5s;
+}
+
+.animVK:hover {
+    color: rgb(20,20,20);
+    background-color: white;
+    transition: background-color 0.5s;
 }
 
 h1 {
@@ -66,6 +85,7 @@ h1 {
 
 
 .text {
+    margin: 1px 0;
     display: flex;
     justify-content: center;
     padding: 0;
@@ -77,4 +97,35 @@ h1 {
     margin: 20px 0;
     padding: 0;
     font-size: 35px;
+    font-weight: bold;
+}
+
+.imgUser {
+    display: flex;
+    justify-content: center;
+    width: 40vh;
+}
+
+.skillsbg {
+    display: flex;
+    justify-content: center;
+    margin: 150px 70px 0 70px;
+    padding: 50px 0 10px 0;
+    border: 1px solid transparent;
+    border-radius: 40px;
+    background-image: linear-gradient(to left top, darkviolet,purple);
+}
+
+.skills {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.firstPanel {
+    display: flex;
+    justify-content: center;
+    margin: 300px 0 0 0;
 }
