--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -109,10 +109,10 @@ h1 {
 .skillsbg {
     display: flex;
     justify-content: center;
-    margin: 150px 70px 0 70px;
-    padding: 50px 0 20px 0;
+    margin: 150px 100px 0 100px;
+    padding: 50px 0 300px 0;
     border: 1px solid transparent;
-    border-radius: 40px;
+    border-radius: 25px;
     background-image: linear-gradient(to left top, darkviolet,purple);
 }
 
@@ -127,18 +127,9 @@ h1 {
     display: flex;
     justify-content: center;
     flex-direction: row;
-}
-
-.secondPanel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 50px 0 0 30px;
-    background-color: black;
-    border: 1px solid black;
-    border-radius: 30px;
-    padding: 50px 15px 50px 15px;
+    position: absolute;
+    top: 70vh;
+    left: 65vh;
 }
 
 .firstPanel {
@@ -151,6 +142,18 @@ h1 {
     border: 1px solid black;
     border-radius: 30px;
     padding: 50px 34px 50px 34px;
+}
+
+.secondPanel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 50px 0 0 30px;
+    background-color: black;
+    border: 1px solid black;
+    border-radius: 30px;
+    padding: 50px 15px 50px 15px;
 }
 
 .iconFP {
