--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -110,7 +110,7 @@ h1 {
     display: flex;
     justify-content: center;
     margin: 150px 100px 0 100px;
-    padding: 50px 0 300px 0;
+    padding: 50px 0 0px 0;
     border-radius: 25px;
     background-image: linear-gradient(to left, darkviolet,purple, darkviolet);
 }
@@ -126,9 +126,7 @@ h1 {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    position: absolute;
-    top: 70vh;
-    left: 65vh;
+    margin: 0 0 -30vh 0;
 }
 
 .firstPanel {
