--- a/css/works.css
+++ b/css/works.css
@@ -10,30 +10,91 @@ body {
     color: white;
 }
 
-header {
+.panel {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     align-items: center;
-    justify-content: flex-start;
-    background: rgb(36,36,36);
     width: 100vw;
     height: fit-content;
     column-gap: 1rem;
+    padding: 20px 0;
 }
 
 a:link, a:visited {
     text-decoration: none;
-    color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-    background-image: linear-gradient(to right bottom, yellow, green);
+    color: cyan;
+    transition: 0.3s;
     scale: 1;
 }
 
 a:hover {
-    color: transparent;
-    -webkit-background-clip: text;
+    color: lightblue;
+    /* -webkit-background-clip: text;
     background-clip: text;
-    transition: 0.2s;
+    background-image: linear-gradient(to bottom, darkviolet, yellow); */
+    transition: 0.3s;
     scale: 1.3;
+}
+
+.titleMe {
+    font-size: 30px;
+}
+
+.home {
+    font-size: 25px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    padding: 0 300px;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.headline {
+    margin: 50px;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.site {
+    display: flex;
+    border: 2px solid gray;
+    border-radius: 20px;
+    padding: 15px;
+    gap: 40px;
+    margin-bottom: 60px;
+    background: rgb(36,36,36);
+}
+
+.site__img,.site__text{
+    width: calc(100% / 2  - 40px / 2 );
+}
+
+.site__img img {
+    width: 100%;
+    border: 1px solid gray;
+}
+
+.site__text{
+    text-align: center;
+}
+
+.site__text .site__headline {
+    margin-top: 70px;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.site__text p {
+    color: lightgray;
+    margin-bottom: 50px;
+}
+
+.site__text a {
+    content: "";
 }
