--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -21,10 +21,15 @@ header {
     column-gap: 1rem;
 }
 
-a {
-    font-size: 1.5rem;
+a:link, a:visited{
     text-decoration: none;
     color: white;
+    transition: 0.3s;
+}
+
+a:hover {
+    color: gray;
+    transition: 0.2s;
 }
 
 .animDs {
