--- a/css/index.css
+++ b/css/index.css
@@ -21,10 +21,16 @@ header {
     column-gap: 1rem;
 }
 
-a {
+a:link, a:visited{
     font-size: 1.5rem;
     text-decoration: none;
     color: white;
+    transition: 0.3s;
+}
+
+a:hover {
+    color: gray;
+    transition: 0.2s;
 }
 
 hd {
