--- a/css/works.css
+++ b/css/works.css
@@ -18,7 +18,7 @@ body {
     width: 100vw;
     height: fit-content;
     column-gap: 1rem;
-    padding: 20px 0;
+    padding: 32px 0 170px 0;
 }
 
 a:link, a:visited {
@@ -35,19 +35,58 @@ a:hover {
     transition: 0.3s;
 }
 
+.animDs {
+    margin-left: 10px;
+    font-size: 20px;
+    border: 1px solid white;
+    border-radius: 800px;
+    padding: 5px 5px 5px 4.5px;
+    transition: background-color 0.5s;
+}
+
+.animDs:hover {
+    color: rgb(20,20,20);
+    background-color: white;
+    transition: background-color 0.5s;
+}
+
+
+.animVK {
+    margin-left: -7px;
+    font-size: 20px;
+    border: 1px solid white;
+    border-radius: 30px;
+    padding: 5px 8px;
+    transition: background-color 0.5s;
+}
+
+.animVK:hover {
+    color: rgb(20,20,20);
+    background-color: white;
+    transition: background-color 0.5s;
+}
+
 .titleMe {
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    background-image: linear-gradient(to right bottom, orange, rgb(132, 0, 255));
+    text-decoration: none;
+    font-weight: bold;
     font-size: 30px;
-    margin-left: 400px;
+    margin-left: 300px;
 }
 
 .home {
-    font-size: 25px;
-    margin-left: 700px;
+    font-size: 20px;
+    margin-left: 715px;
+    font-weight: bold;
 }
 
 .aboutme {
-    font-size: 25px;
-    margin-left: 50px;
+    font-size: 20px;
+    margin-left: 25px;
+    font-weight: bold;
 }
 
 .content {
@@ -63,7 +102,7 @@ a:hover {
 .headline {
     margin: 50px;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .site {
