--- a/css/contact.css
+++ b/css/contact.css
@@ -8,6 +8,10 @@ body {
     height: 100vh;
     background-color: rgb(20,20,20);
     color: white;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 button {
