--- a/css/contact.css
+++ b/css/contact.css
@@ -62,6 +62,17 @@ a:hover {
     transition: all 0.2s;
 }
 
+.panel {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100vw;
+    height: fit-content;
+    column-gap: 1rem;
+    padding: 32px 0 170px 0;
+}
+
 .block {
     display: flex;
     justify-content: center;
