--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -49,32 +49,16 @@ a:hover {
     transition: 0.3s;
 }
 
-.animDs {
-    margin-left: 20px;
+.contact {
+    margin-left: 5px;
     font-size: 20px;
     border: 1px solid white;
     border-radius: 800px;
-    padding: 5px 0 5px 4.5px;
+    padding: 4px 10px;
     transition: background-color 0.5s;
 }
 
-.animDs:hover {
-    color: rgb(20,20,20);
-    background-color: white;
-    transition: background-color 0.5s;
-}
-
-
-.animVK {
-    margin-left: 8px;
-    font-size: 20px;
-    border: 1px solid white;
-    border-radius: 30px;
-    padding: 5px 8px 5px 8px;
-    transition: background-color 0.5s;
-}
-
-.animVK:hover {
+.contact:hover {
     color: rgb(20,20,20);
     background-color: white;
     transition: background-color 0.5s;
