--- a/css/contact.css
+++ b/css/contact.css
@@ -71,12 +71,12 @@ button:hover {
 a:link, a:visited {
     text-decoration: none;
     color: white;
-    transition: 0.3s;
+    transition: all 0.4s;
 }
 
 a:hover {
     color: gray;
-    transition: 0.3s;
+    transition: all 0.3s;
 }
 
 .panel {
@@ -87,7 +87,7 @@ a:hover {
     width: 100vw;
     height: fit-content;
     column-gap: 1rem;
-    padding: 32px 0 170px 0;
+    padding: 32px 0 150px 0;
 }
 
 .title {
@@ -95,7 +95,7 @@ a:hover {
     -webkit-background-clip: text;
     background-clip: text;
     background-image: linear-gradient(to right bottom, orange, rgb(132, 0, 255));
-    margin: 0 0 0 250px;
+    margin: 0 0 0 300px;
     font-weight: bold;
     font-size: 30px;
     cursor: default;
@@ -115,7 +115,7 @@ a:hover {
 
 .works {
     font-size: 20px;
-    margin-left: 30px;
+    margin-left: 25px;
     font-weight: bold;
 }
 
@@ -214,7 +214,7 @@ a:hover {
 }
 
 .avatarVK {
-    width: 127.8px;
+    width: 127px;
     border-radius: 50%;
     scale: 1;
     transition: all 0.2s;
