--- a/css/index.css
+++ b/css/index.css
@@ -10,19 +10,19 @@ body {
     color: white;
 }
 
-header {
-    background: rgb(36,36,36);
+.panel {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 100vw;
     height: fit-content;
     column-gap: 1rem;
+    box-sizing: border-box; /* помогает убрать увеличение сайта в ширину */
+    padding: 32px 0 22px 0;
 }
 
 a:link, a:visited{
-    font-size: 1.5rem;
     text-decoration: none;
     color: white;
     transition: 0.3s;
@@ -42,12 +42,40 @@ hd {
 }
 
 .title {
-    cursor: default;
     color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
-    background-image: linear-gradient(to right, orange, rgb(132, 0, 255));
-    text-decoration: none;
+    background-image: linear-gradient(to right bottom, orange, rgb(132, 0, 255));
+    font-weight: bold;
+    margin-left: 300px;
+    font-size: 30px;
+    cursor: default;
+}
+
+.contact {
+    margin-left: 5px;
+    font-size: 20px;
+    border: 1px solid white;
+    border-radius: 800px;
+    padding: 1px 8px;
+    transition: background-color 0.5s;
+}
+
+.contact:hover {
+    color: rgb(20,20,20);
+    background-color: white;
+    transition: background-color 0.5s;
+}
+
+.aboutme {
+    font-size: 20px;
+    margin-left: 790px;
+    font-weight: bold;
+}
+
+.myworks {
+    font-size: 20px;
+    margin-left: 25px;
     font-weight: bold;
 }
 
