--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -11,16 +11,6 @@ body {
     color: white;
 }
 
-header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    height: 7vh;
-    margin: 15px 0 180px 0;
-    column-gap: 1rem;
-}
-
 button {
     margin: 20px 0 50px 0;
     font-size: 25px;
@@ -49,23 +39,16 @@ a:hover {
     transition: 0.3s;
 }
 
-.contact {
-    margin-left: 5px;
-    font-size: 20px;
-    border: 1px solid white;
-    border-radius: 800px;
-    padding: 4px 10px;
-    transition: background-color 0.5s;
-}
-
-.contact:hover {
-    color: rgb(20,20,20);
-    background-color: white;
-    transition: background-color 0.5s;
-}
-
-h1 {
-    margin: 0;
+.panel2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    height: fit-content;
+    column-gap: 1rem;
+    box-sizing: border-box;
+    padding: 32px 0 22px 0;
+    margin-bottom: 158px;
 }
 
 .titleMe {
@@ -85,16 +68,40 @@ h1 {
     font-size: 20px;
 }
 
+.panelAboutme:link, .panelAboutme:visited {
+    margin-left: 30px;
+    font-size: 20px;
+    color: gray;
+}
+
+.panelAboutme:hover {
+    color: gray;
+}
+
 .panelWorks {
     margin-left: 30px;
     font-size: 20px;
+}
+
+.contact {
+    margin-left: 10px;
+    font-size: 20px;
+    border: 1px solid white;
+    border-radius: 800px;
+    padding: 4px 10px;
+    transition: background-color 0.5s;
+}
+
+.contact:hover {
+    color: rgb(20,20,20);
+    background-color: white;
+    transition: background-color 0.5s;
 }
 
 .text {
     margin: 1px 0;
     text-align: center;
     font-size: 19px;
-
 }
 
 .title {
