--- a/css/index.css
+++ b/css/index.css
@@ -10,18 +10,6 @@ body {
     color: white;
 }
 
-.panel {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100vw;
-    height: fit-content;
-    column-gap: 1rem;
-    box-sizing: border-box; /* помогает убрать увеличение сайта в ширину */
-    padding: 32px 0 22px 0;
-}
-
 a:link, a:visited{
     text-decoration: none;
     color: white;
@@ -41,19 +29,52 @@ hd {
     background-size: 200% 200%;
 }
 
-.title {
+.panel {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100vw;
+    height: fit-content;
+    column-gap: 1rem;
+    box-sizing: border-box;
+    padding: 32px 0 22px 0;
+}
+
+.titleMe {
+    margin: 0 0 0 300px;
     color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
     background-image: linear-gradient(to right bottom, orange, rgb(132, 0, 255));
+    text-decoration: none;
     font-weight: bold;
-    margin-left: 300px;
     font-size: 30px;
     cursor: default;
 }
 
+.panelHome:link, .panelHome:visited {
+    margin-left: 700px;
+    font-size: 20px;
+    color: gray;
+}
+
+.panelHome:hover {
+    color: gray;
+}
+
+.panelAboutme {
+    margin-left: 30px;
+    font-size: 20px;
+}
+
+.panelWorks {
+    margin-left: 30px;
+    font-size: 20px;
+}
+
 .contact {
-    margin-left: 5px;
+    margin-left: 10px;
     font-size: 20px;
     border: 1px solid white;
     border-radius: 800px;
@@ -65,18 +86,6 @@ hd {
     color: rgb(20,20,20);
     background-color: white;
     transition: background-color 0.5s;
-}
-
-.aboutme {
-    font-size: 20px;
-    margin-left: 790px;
-    font-weight: bold;
-}
-
-.myworks {
-    font-size: 20px;
-    margin-left: 25px;
-    font-weight: bold;
 }
 
 .main {
