--- a/css/index.css
+++ b/css/index.css
@@ -84,7 +84,8 @@ hd {
 
 .contact:hover {
     color: rgb(20,20,20);
-    background-color: white;
+    background-color: gray;
+    border-color: gray;
     transition: background-color 0.5s;
 }
 
