--- a/css/works.css
+++ b/css/works.css
@@ -77,7 +77,8 @@ a:hover {
 
 .contact:hover {
     color: rgb(20,20,20);
-    background-color: white;
+    background-color: gray;
+    border-color: gray;
     transition: background-color 0.5s;
 }
 
