--- a/css/contact.css
+++ b/css/contact.css
@@ -4,8 +4,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
-    width: 100vw;
-    height: 100vh;
     background-color: rgb(20,20,20);
     color: white;
     -webkit-user-select: none;
@@ -56,13 +54,31 @@ button:hover {
     background-color: rgb(20,20,20);
     border: 1px solid white;
     font-size: 16px;
-    padding: 15px 200px;
+    padding: 15px 197px;
     border-radius: 10px;
     scale: 1;
     transition: all 0.2s;
 }
 
 .button2:hover {
+    scale: 1.02;
+    transition: all 0.2s;
+    box-shadow: 0 0 20px 3px black;
+}
+
+.button3 {
+    margin-top: 30px;
+    color: white;
+    background-color: rgb(20,20,20);
+    border: 1px solid white;
+    font-size: 16px;
+    padding: 15px 205px;
+    border-radius: 10px;
+    scale: 1;
+    transition: all 0.2s;
+}
+
+.button3:hover {
     scale: 1.02;
     transition: all 0.2s;
     box-shadow: 0 0 20px 3px black;
@@ -84,7 +100,6 @@ a:hover {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    width: 100vw;
     height: fit-content;
     column-gap: 1rem;
     box-sizing: border-box;
@@ -144,7 +159,7 @@ a:hover {
     background: rgb(30,30,30);
     border: 1px solid white;
     cursor: default;
-    padding: 100px 100px;
+    padding: 80px 80px;
     transition: all 0.3s;
     scale: 1;
 }
@@ -164,7 +179,7 @@ a:hover {
     border: 1px solid white;
     cursor: default;
     margin: 0 0 0 100px;
-    padding: 100px 100px;
+    padding: 120px 80px;
     transition: all 0.3s;
     scale: 1;
 }
@@ -175,10 +190,38 @@ a:hover {
     box-shadow: 0 0 20px 3px white;
 }
 
+.block3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: rgb(30,30,30);
+    border: 1px solid white;
+    cursor: default;
+    margin: 100px 0 100px 0;
+    padding: 80px 80px;
+    transition: all 0.3s;
+    scale: 1;
+}
+
+.block3:hover {
+    scale: 1.03;
+    transition: all 0.3s;
+    box-shadow: 0 0 20px 3px white;
+}
+
 .idk {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+}
+
+.idk2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .links a:link, .links a:visited {
@@ -243,10 +286,22 @@ a:hover {
     box-shadow: 0 0 10px 3px black;
 }
 
+.avatarGH {
+    width: 130px;
+    border-radius: 50%;
+    scale: 1;
+    transition: all 0.2s;
+}
+
+.avatarGH:hover {
+    scale: 1.05;
+    transition: all 0.2s;
+    box-shadow: 0 0 10px 3px black;
+}
+
 .img {
     width: 100px;
 }
-
 
 .defaultColor {
     color: white;
@@ -254,7 +309,9 @@ a:hover {
 
 .text {
     font-size: 18px;
-    margin: 10px 0 0 0;
+    font-weight: bold;
+    color: cyan;
+    margin: 15px 0 0 0;
 }
 
 .margin-left {
