--- a/css/index.css
+++ b/css/index.css
@@ -122,7 +122,7 @@ hd {
     margin-bottom: 3rem;
 }
 
-.grid-item-1 {
+.lng-grid-item-1 {
     cursor: default;
     display: flex;
     flex-direction: column;
@@ -141,7 +141,7 @@ hd {
     transition: all 0.5s;
 }
 
-.grid-item-2 {
+.lng-grid-item-2 {
     cursor: default;
     display: flex;
     flex-direction: column;
@@ -160,7 +160,7 @@ hd {
     transition: all 0.5s;
 }
 
-.grid-item-3 {
+.lng-grid-item-3 {
     cursor: default;
     display: flex;
     flex-direction: column;
@@ -179,7 +179,7 @@ hd {
     transition: all 0.5s;
 }
 
-.grid-item-4 {
+.lng-grid-item-4 {
     cursor: default;
     display: flex;
     flex-direction: column;
