--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+:root {
+    --first-color: rgb(20, 20, 20);
+    --second-color: rgb(140, 0, 255);
+}
 
 body {
     margin: 0;
@@ -6,7 +10,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     width: 100vw;
     height: 100vh;
-    background-color: rgb(20,20,20);
+    background-color: var(--first-color);
     color: white;
 }
 
@@ -19,6 +23,15 @@ a:link, a:visited{
 a:hover {
     color: gray;
     transition: 0.2s;
+}
+
+.options {
+    margin: 0 0 0 250px;
+    background-color: var(--first-color);
+    color: white;
+    border: 1px solid gray;
+    border-radius: 15px;
+    padding: 4px 7px;
 }
 
 hd {
@@ -34,7 +47,6 @@ hd {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    width: 100vw;
     height: fit-content;
     column-gap: 1rem;
     box-sizing: border-box;
@@ -71,6 +83,10 @@ hd {
 .panelWorks {
     margin-left: 30px;
     font-size: 20px;
+}
+
+.lng-info1 {
+    content: "";
 }
 
 .contact {
@@ -122,7 +138,7 @@ hd {
     margin-bottom: 3rem;
 }
 
-.lng-grid-item-1 {
+.grid-item-1 {
     cursor: default;
     display: flex;
     flex-direction: column;
@@ -141,7 +157,7 @@ hd {
     transition: all 0.5s;
 }
 
-.lng-grid-item-2 {
+.grid-item-2 {
     cursor: default;
     display: flex;
     flex-direction: column;
@@ -160,7 +176,7 @@ hd {
     transition: all 0.5s;
 }
 
-.lng-grid-item-3 {
+.grid-item-3 {
     cursor: default;
     display: flex;
     flex-direction: column;
@@ -179,7 +195,7 @@ hd {
     transition: all 0.5s;
 }
 
-.lng-grid-item-4 {
+.grid-item-4 {
     cursor: default;
     display: flex;
     flex-direction: column;
