--- a/css/works.css
+++ b/css/works.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+:root {
+    --first-color: rgb(20, 20, 20);
+    --second-color: rgb(140, 0, 255);
+}
 
 body {
     margin: 0;
@@ -19,6 +23,15 @@ a:link, a:visited {
 a:hover {
     color: gray;
     transition: 0.3s;
+}
+
+.options {
+    margin: 0 0 0 250px;
+    background-color: var(--first-color);
+    color: white;
+    border: 1px solid gray;
+    border-radius: 15px;
+    padding: 4px 7px;
 }
 
 .panel {
@@ -82,13 +95,13 @@ a:hover {
     transition: background-color 0.5s;
 }
 
-.lng-content {
+.content {
     display: flex;
     flex-direction: column;
     padding: 0 300px;
 }
 
-.text-center {
+.lng-textMyworks {
     text-align: center;
 }
 
@@ -125,11 +138,11 @@ a:hover {
     border: 1px solid gray;
 }
 
-.site__text{
+.site__text {
     text-align: center;
 }
 
-.site__text .site__headline {
+.site__text .lng-site__headline {
     margin-top: 70px;
     font-size: 40px;
     font-weight: bold;
