--- a/css/index.css
+++ b/css/index.css
@@ -85,10 +85,6 @@ hd {
     font-size: 20px;
 }
 
-.lng-info1 {
-    content: "";
-}
-
 .contact {
     margin-left: 10px;
     font-size: 20px;
@@ -126,13 +122,13 @@ hd {
 }
 
 .grid {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: 2fr 2fr;
     grid-column-gap: 12px;
-    grid-row-gap: 28px;
-    justify-items: stretch;
-    align-items: stretch;
+    grid-row-gap: 28px; */
+    justify-items: center;
+    align-items: center;
     width: fit-content;
     height: fit-content;
     margin-bottom: 3rem;
@@ -148,7 +144,7 @@ hd {
     text-align: center;
     font-size: 24px;
     padding: 8px;
-    height: 100%;
+    height: 160px;
     width: 100%;
     background: linear-gradient(to right bottom, rgb(20,20,20), rgba(102, 0, 255, 0.627));
     border-style: solid;
@@ -167,7 +163,7 @@ hd {
     text-align: center;
     font-size: 24px;
     padding: 8px;
-    height: 100%;
+    height: 160px;
     width: 100%;
     background: linear-gradient(to left bottom, rgb(20,20,20), rgba(102, 0, 255, 0.627));
     border-style: solid;
@@ -186,7 +182,7 @@ hd {
     text-align: center;
     font-size: 24px;
     padding: 8px;
-    height: 100%;
+    height: 160px;
     width: 100%;
     background: linear-gradient(to right top, rgb(20,20,20), rgba(102, 0, 255, 0.627));
     border-style: solid;
@@ -205,7 +201,7 @@ hd {
     text-align: center;
     font-size: 24px;
     padding: 8px;
-    height: 100%;
+    height: 160px;
     width: 100%;
     background: linear-gradient(to left top, rgb(20,20,20), rgba(102, 0, 255, 0.627));
     border-style: solid;
@@ -250,4 +246,47 @@ button {
 button:hover {
     scale: 1.1;
     box-shadow: 0 0 20px 3px rgb(140, 0, 255);
+}
+
+
+
+/* Мобильная версия */
+
+.navbar {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    
+    .col-sm-12 {
+        margin: 0 5px;
+    }
+}
+
+@media (max-width: 767px) {
+    
+    .panel {
+        display: none;
+    }
+
+    .navbar {
+        display: flex;
+    }
+
+    .navbar-brand {
+        color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+        background-image: linear-gradient(to right bottom, orange, rgb(132, 0, 255));
+        font-size: 30px;
+        padding: 10px;
+    }
+
+    hd {
+        width: 80vw;
+    }
+
+    .options {
+        margin: 0;
+    }
 }
