fix translate on phone

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -43,7 +43,16 @@ a:hover {
     transition: 0.3s;
 }
 
-.optionsLangG {
+.optionsLang {
+    margin: 0 0 0 250px;
+    background-color: var(--first-color);
+    color: white;
+    border: 1px solid gray;
+    border-radius: 15px;
+    padding: 4px 7px;
+}
+
+.optionsLangMobile {
     margin: 0 0 0 250px;
     background-color: var(--first-color);
     color: white;
@@ -346,7 +355,7 @@ hd {
         width: 90vw;
     }
 
-    .optionsLangG {
+    .optionsLangMobile {
         margin: 0;
     }
 
