--- a/css/contact.css
+++ b/css/contact.css
@@ -209,9 +209,10 @@ a:hover {
 
 .idk2 {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .links a:link, .links a:visited {
@@ -312,4 +313,11 @@ a:hover {
 
 .margin-left {
     margin: 0 0 0 30px;
+}
+
+
+@media (min-width: 2300px) {
+    .block3 {
+        margin-left: 100px;
+    }
 }
