--- a/css/contact.css
+++ b/css/contact.css
@@ -148,6 +148,7 @@ a:hover {
     flex-direction: column;
     background: rgb(30,30,30);
     border: 1px solid white;
+    border-radius: 10px;
     cursor: default;
     padding: 80px 80px;
     transition: all 0.3s;
@@ -167,6 +168,7 @@ a:hover {
     flex-direction: column;
     background: rgb(30,30,30);
     border: 1px solid white;
+    border-radius: 10px;
     cursor: default;
     margin: 0 0 0 100px;
     padding: 120px 80px;
@@ -187,6 +189,7 @@ a:hover {
     flex-direction: column;
     background: rgb(30,30,30);
     border: 1px solid white;
+    border-radius: 10px;
     cursor: default;
     margin: 100px 0 100px 0;
     padding: 80px 80px;
@@ -271,7 +274,7 @@ a:hover {
 }
 
 .avatarVK {
-    width: 127px;
+    width: 133px;
     border-radius: 50%;
     scale: 1;
     transition: all 0.2s;
@@ -284,7 +287,7 @@ a:hover {
 }
 
 .avatarGH {
-    width: 130px;
+    width: 145px;
     border-radius: 50%;
     scale: 1;
     transition: all 0.2s;
